WIP added docker file and docker compose file, removed unnecessary classes